# weather-information-collector

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  changelog.md  possible-improvements.md  readme.md  sonar-project.properties
src/: CMakeLists.txt  ReturnCodes.hpp  Version.cpp  Version.hpp  main.cpp  weather-information-collector.cbp
src/api/: API.hpp  Apixu.cpp  Apixu.hpp  DarkSky.cpp  DarkSky.hpp  Factory.cpp  Factory.hpp  Limit.cpp  Limit.hpp  Limits.cpp  Limits.hpp  OpenMeteo.cpp  OpenMeteo.hpp  OpenWeatherMap.cpp  OpenWeatherMap.hpp  Plans.cpp  Plans.hpp  Types.cpp  Types.hpp  Weatherbit.cpp  Weatherbit.hpp  Weatherstack.cpp  Weatherstack.hpp  apixu.md  darksky.md  openmeteo.md  openweathermap.md  weatherbit.md  weatherstack.md
src/benchmark/: CMakeLists.txt  benchmark.hpp  main.cpp  readme.md  weather-information-collector-benchmark.cbp
src/collector/: CMakeLists.txt  Collector.cpp  Collector.hpp  main.cpp  readme.md  weather-information-collector.cbp
src/conf/: Configuration.cpp  Configuration.hpp
src/configtest/: CMakeLists.txt  main.cpp  readme.md  weather-information-collector-configtest.cbp
src/creator/: CMakeLists.txt  CliUtilities.cpp  CliUtilities.hpp  main.cpp  readme.md  weather-information-collector-task-creator.cbp
src/data/: Forecast.cpp  Forecast.hpp  ForecastMeta.cpp  ForecastMeta.hpp  Location.cpp  Location.hpp  LocationWithCountry.cpp  LocationWithCountry.hpp  Weather.cpp  Weather.hpp  WeatherMeta.cpp  WeatherMeta.hpp
src/db/: API.cpp  API.hpp  ConnectionInformation.cpp  ConnectionInformation.hpp  Exceptions.cpp  Exceptions.hpp  SSQLS_forecast.hpp  SSQLS_forecastdata.hpp  SSQLS_location.hpp  SSQLS_weatherdata.hpp  Store.hpp  Structure.cpp  Structure.hpp  Utilities.cpp  Utilities.hpp
src/db/mariadb/: API.cpp  API.hpp  Connection.cpp  Connection.hpp  Field.cpp  Field.hpp  Result.cpp  Result.hpp  Row.cpp  Row.hpp  SourceMariaDB.cpp  SourceMariaDB.hpp  SourceMySQL.cpp  SourceMySQL.hpp  StoreMariaDB.cpp  StoreMariaDB.hpp  StoreMariaDBBatch.cpp  StoreMariaDBBatch.hpp  StoreMySQL.cpp  StoreMySQL.hpp  StoreMySQLBatch.cpp  StoreMySQLBatch.hpp  Structure.cpp  Structure.hpp  Utilities.cpp  Utilities.hpp  client_version.cpp  client_version.hpp  guess.cpp
src/db/mysqlpp/: API.hpp  SSQLS_forecastdata.hpp  SSQLS_weatherdata.hpp  SourceMySQL.cpp  SourceMySQL.hpp  StoreMySQL.cpp  StoreMySQL.hpp  StoreMySQLBatch.cpp  StoreMySQLBatch.hpp  Structure.hpp  Utilities.cpp  Utilities.hpp  guess.cpp  guess.hpp
src/json/: ApixuFunctions.cpp  ApixuFunctions.hpp  JsonCppApixu.cpp  JsonCppApixu.hpp  JsonCppDarkSky.cpp  JsonCppDarkSky.hpp  JsonCppOwm.cpp  JsonCppOwm.hpp  NLohmannJsonApixu.cpp  NLohmannJsonApixu.hpp  NLohmannJsonDarkSky.cpp  NLohmannJsonDarkSky.hpp  NLohmannJsonOpenMeteo.cpp  NLohmannJsonOpenMeteo.hpp  NLohmannJsonOwm.cpp  NLohmannJsonOwm.hpp  NLohmannJsonWeatherbit.cpp  NLohmannJsonWeatherbit.hpp  NLohmannJsonWeatherstack.cpp  NLohmannJsonWeatherstack.hpp  OpenMeteoFunctions.cpp  OpenMeteoFunctions.hpp  SimdJsonApixu.cpp  SimdJsonApixu.hpp  SimdJsonDarkSky.cpp  SimdJsonDarkSky.hpp  SimdJsonOpenMeteo.cpp  SimdJsonOpenMeteo.hpp  SimdJsonOwm.cpp  SimdJsonOwm.hpp  SimdJsonWeatherbit.cpp  SimdJsonWeatherbit.hpp  SimdJsonWeatherstack.cpp  SimdJsonWeatherstack.hpp  WeatherstackFunctions.cpp  WeatherstackFunctions.hpp
src/net/: Curly.cpp  Curly.hpp  Request.cpp  Request.hpp  curl_version.cpp  curl_version.hpp
src/retrieve/: SourceMySQL.cpp  SourceMySQL.hpp
src/simdjson-compile-test/: CMakeLists.txt  main.cpp
src/store/: Store.hpp  StoreCSV.cpp  StoreCSV.hpp  StoreMySQL.cpp  StoreMySQL.hpp  StoreMySQLBatch.cpp  StoreMySQLBatch.hpp
src/synchronizer/: CMakeLists.txt  main.cpp  readme.md  weather-information-collector-synchronizer.cbp
src/tasks/: Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
src/update/: CMakeLists.txt  ForecastDataUpdate_0.8.3.cpp  ForecastDataUpdate_0.8.3.hpp  SemVer.cpp  UpdateTo_0.10.0.cpp  UpdateTo_0.10.0.hpp  UpdateTo_0.5.5.cpp  UpdateTo_0.5.5.hpp  UpdateTo_0.6.0.cpp  UpdateTo_0.6.0.hpp  UpdateTo_0.6.6.cpp  UpdateTo_0.6.6.hpp  UpdateTo_0.7.0.cpp  UpdateTo_0.7.0.hpp  UpdateTo_0.8.0.cpp  UpdateTo_0.8.0.hpp  UpdateTo_0.8.1.cpp  UpdateTo_0.8.1.hpp  UpdateTo_0.8.3.cpp  UpdateTo_0.8.3.hpp  UpdateTo_0.8.5.cpp  UpdateTo_0.8.5.hpp  UpdateTo_0.8.6.cpp  UpdateTo_0.8.6.hpp  UpdateTo_0.9.0.cpp  UpdateTo_0.9.0.hpp  UpdateTo_0.9.17.cpp  UpdateTo_0.9.17.hpp  UpdateTo_0.9.7.cpp  UpdateTo_0.9.7.hpp  Update_0.5.4_to_0.5.5.cpp  Update_0.5.4_to_0.5.5.hpp  Update_0.5.7_to_0.6.0.cpp  Update_0.5.7_to_0.6.0.hpp  Update_0.6.5_to_0.6.6.cpp  Update_0.6.5_to_0.6.6.hpp  WeatherDataUpdate_0.8.3.cpp  WeatherDataUpdate_0.8.3.hpp  guess.cpp  guess.hpp  (+3 more)
src/util/: Directories.cpp  Directories.hpp  Environment.cpp  Environment.hpp  GitInfos.hpp  GitInfos.template.cpp  NumericPrecision.hpp  SemVer.hpp  Strings.cpp  Strings.hpp  encode.cpp  encode.hpp
tests/: CMakeLists.txt  find_catch.hpp  readme.md  tests.cbp
tests/api/: Types.cpp
tests/api/apixu/: CMakeLists.txt  apixu-parsing.cbp  apixu.current.json  apixu.current.rain.json  apixu.current.snow.json  apixu.forecast.hour.json  apixu.forecast.json  (+2 more)
tests/benchmark/: CMakeLists.txt  parameter-misuse.cmd
tests/collector/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/conf/: Configuration.cpp
tests/configtest/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/creator/: CMakeLists.txt  parameter-misuse.sh
tests/data/: Location.cpp  Weather.cpp
tests/db/: CMakeLists.txt  CiConnection.cpp  CiConnection.hpp  CiData.cpp  CiData.hpp  ConnectionInformation.cpp  InitDB.hpp
tests/general/: CMakeLists.txt  main.cpp  tests.cbp
tests/json/: CMakeLists.txt
tests/store/: StoreCSV.cpp
tests/synchronizer/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/task-manager/: CMakeLists.txt  main.cpp  task-manager.cbp  test-example-hammelburg-country.conf
tests/tasks/: Task.cpp  TaskManager.cpp
tests/update/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh
tests/util/: Directories.cpp  Strings.cpp
(+172 files in other folders)
